added home page sections

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,10 @@
   margin: 0;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
