added responsiveness to sections and scrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,18 +21,22 @@
   margin: 0;
 }
 
-*::-webkit-scrollbar {
-  display: none;
+body::-webkit-scrollbar {
+  width: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #c2410c;
+  /* border-right: 1px solid white; */
+}
+
+body::-webkit-scrollbar-track {
+  background: transparent;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: black;
 }
 
 @layer utilities {
